--- a/lab01/odonnell-bio.html
+++ b/lab01/odonnell-bio.html
@@ -1,1 +1,3 @@
-My names is James O’Donnell and I am an IM&T major interested in managing large scale projects.  In a professional setting, I am a leader, technologically adept, and a strong communicator.  In my free time, I enjoy skiing, playing or watching football, and lots of other sports-related activities.
+My names is James O’Donnell and I am an IM&T major interested in managing large scale projects. In a professional
+setting, I am a leader, technologically adept, and a strong communicator. In my free time, I enjoy skiing, playing or
+watching football, and lots of other sports-related activities.
